# model-pruner

./: README.md  main.py  pyproject.toml
