[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-pruner"
version = "0.1.0"
requires-python = ">=3.12"

# Your requested dependencies
dependencies = [
    "huggingface_hub",
    "safetensors",
    "torch",
    "transformers",
]

[tool.setuptools]
packages = { find = {} }